--- a/requirements.txt
+++ b/requirements.txt
@@ -76,7 +76,7 @@ lazy_loader==0.3
 libclang==16.0.6
 librosa==0.9.2
 llama-index==0.9.44
-llama-index-agent-openai==0.1.1
+llama-index-agent-openai==0.1.3
 llama-index-cli==0.1.5
 llama-index-core==0.10.68.post1
 llama-index-embeddings-openai==0.1.1
@@ -133,6 +133,7 @@ packaging==23.2
 pandas==1.5.3
 pillow==10.2.0
 platformdirs==4.2.0
+playsound2==1.3.0
 pooch==1.8.1
 posthog==3.4.2
 preshed==3.0.9
@@ -165,6 +166,7 @@ referencing==0.33.0
 regex==2023.10.3
 requests==2.31.0
 requests-oauthlib==1.3.1
+resampy==0.4.3
 rich==13.7.0
 rpds-py==0.18.0
 rsa==4.9
@@ -172,6 +174,7 @@ safetensors==0.4.5
 scikit-learn==1.4.1.post1
 scipy==1.12.0
 seaborn==0.13.2
+simpleaudio==1.0.4
 six==1.16.0
 smart-open==6.4.0
 smmap==5.0.1
