--- a/requirements.txt
+++ b/requirements.txt
@@ -76,7 +76,7 @@ lazy_loader==0.3
 libclang==16.0.6
 librosa==0.9.2
 llama-index==0.9.44
-llama-index-agent-openai==0.1.3
+llama-index-agent-openai
 llama-index-cli==0.1.5
 llama-index-core==0.10.68.post1
 llama-index-embeddings-openai==0.1.1
