--- a/requirements.txt
+++ b/requirements.txt
@@ -75,21 +75,22 @@ langcodes==3.3.0
 lazy_loader==0.3
 libclang==16.0.6
 librosa==0.9.2
-llama-index==0.9.44
+llama-index
 llama-index-agent-openai
-llama-index-cli==0.1.5
-llama-index-core==0.10.68.post1
-llama-index-embeddings-openai==0.3.1
-llama-index-indices-managed-llama-cloud==0.1.3
-llama-index-legacy==0.9.48
-llama-index-llms-openai==0.1.1
-llama-index-multi-modal-llms-openai==0.1.1
-llama-index-program-openai==0.1.1
-llama-index-question-gen-openai==0.1.1
-llama-index-readers-file==0.1.1
-llama-index-readers-llama-parse==0.1.3
-llama-index-vector-stores-chroma==0.1.4
-llama-parse==0.3.4
+llama-index-cli
+llama-index-core
+llama-index-embeddings-openai
+llama-index-indices-managed-llama-cloud
+llama-index-legacy
+llama-index-llms-openai
+llama-index-multi-modal-llms-openai
+llama-index-program-openai
+llama-index-question-gen-openai
+llama-index-readers-file
+llama-index-readers-llama-parse
+llama-index-vector-stores-chroma
+llama-parse
+llamaindex-py-client
 llamaindex-py-client==0.1.13
 llvmlite==0.42.0
 Markdown==3.5.2
