--- a/requirements.txt
+++ b/requirements.txt
@@ -199,7 +199,7 @@ tenacity==8.2.3
 tensorboard==2.16.2
 tensorboard-data-server==0.7.2
 tensorflow==2.16.1
-tensorflow-io-gcs-filesystem==0.36.0
+tensorflow-io-gcs-filesystem
 termcolor==2.4.0
 textblob==0.18.0.post0
 textstat==0.7.3
